--- a/help/using/docs-updates/docs-2015.md
+++ b/help/using/docs-updates/docs-2015.md
@@ -1,6 +1,6 @@
 ---
-description: liste de documentation sur les Audiences Manager nouvelles et révisées publiée en 2015. Inclut des mises à jour mineures ou des modifications au guide d’Audience Manager qui pourraient ne pas être incluses dans les notes de mise à jour de l’Experience Cloud.
-seo-description: liste de documentation sur les Audiences Manager nouvelles et révisées publiée en 2015. Inclut des mises à jour mineures ou des modifications au guide d’Audience Manager qui pourraient ne pas être incluses dans les notes de mise à jour de l’Experience Cloud.
+description: Liste de documentation sur les Audiences Manager nouvelles et révisées publiée en 2015. Comprend des mises à jour ou des modifications mineures du guide d’Audience Manager qui peuvent ne pas être incluses dans les notes de mise à jour de l’Experience Cloud.
+seo-description: Liste de documentation sur les Audiences Manager nouvelles et révisées publiée en 2015. Comprend des mises à jour ou des modifications mineures du guide d’Audience Manager qui peuvent ne pas être incluses dans les notes de mise à jour de l’Experience Cloud.
 seo-title: Mises à jour de la documentation 2015
 solution: Audience Manager
 title: Mises à jour de la documentation 2015
@@ -17,9 +17,9 @@ ht-degree: 11%
 
 # Mises à jour de la documentation 2015 {#documentation-updates}
 
-liste de documentation sur les Audiences Manager nouvelles et révisées publiée en 2015. Inclut des mises à jour mineures ou des modifications au guide d’Audience Manager qui pourraient ne pas être incluses dans les notes de mise à jour de l’Experience Cloud.
+Liste de documentation sur les Audiences Manager nouvelles et révisées publiée en 2015. Comprend des mises à jour ou des modifications mineures du guide d’Audience Manager qui peuvent ne pas être incluses dans les notes de mise à jour de l’Experience Cloud.
 
-## November, 2015 {#nov-15}
+## Novembre 2015 {#nov-15}
 
 <table id="table_AC8FF0DB45B546C69D89749FF0FA1CCD"> 
  <thead> 
@@ -38,29 +38,29 @@ liste de documentation sur les Audiences Manager nouvelles et révisées publié
    <td colname="col2"> <p>Révision afin d’inclure de nouvelles exigences en matière de mot de passe. </p> </td> 
   </tr> 
   <tr> 
-   <td colname="col1"> <p> <a href="../features/audience-marketplace/marketplace-data-buyers/marketplace-buyer-billing.md#cost-attribution"> Attribution de la facturation et de l’impression pour les flux de données CPM </a> </p> </td> 
-   <td colname="col2"> <p>Instructions sur la manière d’allouer des impressions pour différents flux de données CPM. </p> </td> 
+   <td colname="col1"> <p> <a href="../features/audience-marketplace/marketplace-data-buyers/marketplace-buyer-billing.md#cost-attribution"> Attribution de la facturation et de l’impression pour les flux de données CPM  </a> </p> </td> 
+   <td colname="col2"> <p>Instructions sur la manière d’attribuer des impressions pour différents flux de données CPM. </p> </td> 
   </tr> 
   <tr> 
-   <td colname="col1"> <p> <a href="../features/audience-marketplace/marketplace-data-buyers/marketplace-buyer-billing.md"> Attribution de la facturation et de l’impression pour les flux de données à frais fixes </a> </p> </td> 
+   <td colname="col1"> <p> <a href="../features/audience-marketplace/marketplace-data-buyers/marketplace-buyer-billing.md"> Attribution de la facturation et de l’impression pour les flux de données à frais fixes  </a> </p> </td> 
    <td colname="col2"> <p>Instructions sur la manière d’attribuer des impressions pour différents flux de données à frais fixes. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p> <a href="../features/administration/usage-limits.md"> Limites d’utilisation </a> </p> </td> 
-   <td colname="col2"> <p> <span class="keyword"> L’Audience Manager</span> définit une limite maximale pour le nombre de caractéristiques, de segments, de destinations et de modèles algorithmiques que vous pouvez créer pour un compte. </p> </td> 
+   <td colname="col2"> <p> <span class="keyword"> Audience </span> Manager définit une limite maximale pour le nombre de caractéristiques, de segments, de destinations et de modèles algorithmiques que vous pouvez créer pour un compte. </p> </td> 
   </tr> 
   <tr> 
-   <td colname="col1"> <p> <a href="../features/audience-marketplace/marketplace-data-providers/marketplace-create-manage-feeds.md#discounts"> Remises pour les fournisseurs de données </a> </p> </td> 
+   <td colname="col1"> <p> <a href="../features/audience-marketplace/marketplace-data-providers/marketplace-create-manage-feeds.md#discounts"> Remises pour les fournisseurs de données  </a> </p> </td> 
    <td colname="col2"> <p>Les remises permettent aux fournisseurs de données de réduire le prix d’un flux de données pour certains acheteurs. </p> </td> 
   </tr> 
   <tr> 
-   <td colname="col1"> <p> <a href="../features/audience-marketplace/marketplace-data-buyers/marketplace-manage-subscriptions.md#buyer-discount"> Remises pour les acheteurs de données </a> </p> </td> 
+   <td colname="col1"> <p> <a href="../features/audience-marketplace/marketplace-data-buyers/marketplace-manage-subscriptions.md#buyer-discount"> Remises pour les acheteurs de données  </a> </p> </td> 
    <td colname="col2"> <p>Les acheteurs peuvent demander ou s’abonner à des flux de données à tarif réduit. </p> </td> 
   </tr> 
  </tbody> 
 </table>
 
-## October, 2015 {#oct-15}
+## Octobre 2015 {#oct-15}
 
 <table id="table_3A725D1D52D24CEAB49B10814008F1C7"> 
  <thead> 
@@ -72,10 +72,10 @@ liste de documentation sur les Audiences Manager nouvelles et révisées publié
  <tbody> 
   <tr> 
    <td colname="col1"> <p> <a href="../reference/cid.md"> CID remplace DPID et DPUUID </a> </p> </td> 
-   <td colname="col2"> <p>Mettez à jour votre code pour l’utiliser <code> d_cid</code> ou <code> d_cid_ic</code> au lieu de <code> d_dpid</code> et <code> d_dpuuid</code>. Les variables DPID et DPUUID continueront à fonctionner, mais vous devez les considérer comme obsolètes. Cela inclut les variantes DPID et DPUUID sans le <code> d_</code> préfixe. </p> </td> 
+   <td colname="col2"> <p>Mettez à jour votre code pour utiliser <code> d_cid</code> ou <code> d_cid_ic</code> au lieu de <code> d_dpid</code> et <code> d_dpuuid</code>. Les variables DPID et DPUUID continueront à fonctionner, mais vous devez les considérer comme obsolètes. Cela inclut les variantes DPID et DPUUID sans préfixe <code> d_</code>. </p> </td> 
   </tr> 
   <tr> 
-   <td colname="col1"> <p> <a href="../features/declared-ids.md#variables-and-syntax"> Variables d’URL et syntaxe pour les ID déclarés </a> </p> </td> 
+   <td colname="col1"> <p> <a href="../features/declared-ids.md#variables-and-syntax"> Variables d’URL et syntaxe pour les ID déclarés  </a> </p> </td> 
    <td colname="col2" morerows="1"> <p>Révision du texte afin d’inclure les paires <code> d_cid</code> et <code> d_cid_ic</code> clé-valeur. </p> </td> 
   </tr> 
   <tr> 
@@ -87,12 +87,12 @@ liste de documentation sur les Audiences Manager nouvelles et révisées publié
   </tr> 
   <tr> 
    <td colname="col1"> <p> <a href="../api/dcs-intro/dcs-api-reference/dcs-error-codes.md"> Codes, messages et exemples d’erreur des serveurs de collecte de données </a> </p> </td> 
-   <td colname="col2"> <p>liste et description des codes d’erreur et des messages renvoyés par le serveur de collecte de données. </p> </td> 
+   <td colname="col2"> <p>Liste et description des codes d’erreur et des messages renvoyés par le serveur de collecte de données. </p> </td> 
   </tr> 
  </tbody> 
 </table>
 
-## September, 2015 {#sept-15}
+## septembre 2015 {#sept-15}
 
 <table id="table_A3CAA532BFE7440C93BC11DEF5594D65"> 
  <thead> 
@@ -103,16 +103,16 @@ liste de documentation sur les Audiences Manager nouvelles et révisées publié
  </thead>
  <tbody> 
   <tr> 
-   <td colname="col1"> <p> <a href="../reporting/audience-optimization-reports/metadata-files-intro/metadata-files-intro.md"> Fichiers de données et de métadonnées pour les rapports d’optimisation d’Audience</a> </p> </td> 
-   <td colname="col2"> <p>Format et contenu requis pour intégrer des données dans les rapports Optimisation <span class="wintitle"> des</span> Audiences. </p> </td> 
+   <td colname="col1"> <p> <a href="../reporting/audience-optimization-reports/metadata-files-intro/metadata-files-intro.md"> Fichiers de données et de métadonnées pour les rapports d’Audience Optimization</a> </p> </td> 
+   <td colname="col2"> <p>Format et contenu requis pour intégrer des données dans les rapports <span class="wintitle"> Audience Optimization</span>. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p> <a href="../integration/media-data-integration/impression-data-pixels.md"> Capture des données d’impression de campagne via des appels de pixel </a> </p> </td> 
-   <td colname="col2"> <p>Révisions et mises à jour de texte. Inclut également de nouvelles paires clé-valeur requises pour utiliser et afficher des noms de données lisibles dans les rapports Analytics <span class="wintitle"></span> Advertising. </p> </td> 
+   <td colname="col2"> <p>Révisions et mises à jour de texte. Inclut également de nouvelles paires clé-valeur requises pour utiliser et afficher des noms de données lisibles dans les rapports <span class="wintitle"> Advertising Analytics</span>. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p> <a href="../integration/media-data-integration/click-data-pixels.md"> Capture des données de clics de campagne via des appels de pixel </a> </p> </td> 
-   <td colname="col2"> <p>Révisions et mises à jour de texte. Inclut également de nouvelles paires clé-valeur requises pour utiliser et afficher des noms de données lisibles dans les rapports Analytics <span class="wintitle"></span> Advertising. </p> </td> 
+   <td colname="col2"> <p>Révisions et mises à jour de texte. Inclut également de nouvelles paires clé-valeur requises pour utiliser et afficher des noms de données lisibles dans les rapports <span class="wintitle"> Advertising Analytics</span>. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p> <a href="../reporting/audience-optimization-reports/audience-optimization-reports.md"> Rapports d’Audience Optimization</a> </p> </td> 
@@ -121,7 +121,7 @@ liste de documentation sur les Audiences Manager nouvelles et révisées publié
  </tbody> 
 </table>
 
-## August, 2015 {#aug-15}
+## Août 2015 {#aug-15}
 
 <table id="table_E60674ACBD254365A73AB47FB840A333"> 
  <thead> 
@@ -144,15 +144,15 @@ liste de documentation sur les Audiences Manager nouvelles et révisées publié
     </ul> </td> 
   </tr> 
   <tr> 
-   <td colname="col1"> <p>Activation de la fusion de Profils client </p> </td> 
-   <td colname="col2"> <p> <span class="keyword"> Les clients Analytics</span> doivent définir un code d’intégration lors de l’utilisation du Profil marketing Maître et de la transmission d’identifiants déclarés via le service d’identification des Visiteurs à <span class="keyword"> l’Audience Manager</span>. </p> <p>Ce document est obsolète et a été remplacé par <a href="../features/profile-merge-rules/merge-rules-start.md"> Créer une source</a>de données sur plusieurs périphériques. </p> </td> 
+   <td colname="col1"> <p>Activation de la fusion de profils client </p> </td> 
+   <td colname="col2"> <p> <span class="keyword"> Les clients </span> Analytics doivent définir un code d’intégration lors de l’utilisation du Profil marketing de Principal et de la transmission d’identifiants déclarés via le service d’identification des Visiteurs à  <span class="keyword"> l’Audience Manager</span>. </p> <p>Ce document est obsolète et a été remplacé par <a href="../features/profile-merge-rules/merge-rules-start.md"> Créer une source de données sur plusieurs périphériques</a>. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p> <a href="../faq/faq-reporting.md"> FAQ sur la création de rapports </a> </p> </td> 
-   <td colname="col2"> <p>Une nouvelle entrée de FAQ explique pourquoi, parfois, les caractéristiques nouvellement intégrées ne s’affichent pas dans le graphique <span class="wintitle"></span>de caractéristiques. </p> </td> 
+   <td colname="col2"> <p>Une nouvelle entrée de FAQ explique pourquoi, parfois, les caractéristiques nouvellement intégrées ne s’affichent pas dans le <span class="wintitle"> graphique de caractéristiques</span>. </p> </td> 
   </tr> 
   <tr> 
-   <td colname="col1"> <p> <a href="../features/segments/segment-builder-data.md"> Données de taille de segment et de caractéristiques dans le créateur de segments </a>. </p> </td> 
+   <td colname="col1"> <p> <a href="../features/segments/segment-builder-data.md"> Données de taille de segment et de caractéristiques dans le créateur de segments  </a>. </p> </td> 
    <td colname="col2"> <p>Révision de la description de la taille estimée du segment. </p> </td> 
   </tr> 
   <tr> 
@@ -162,7 +162,7 @@ liste de documentation sur les Audiences Manager nouvelles et révisées publié
  </tbody> 
 </table>
 
-## July, 2015 {#july-15}
+## Juillet 2015 {#july-15}
 
 <table id="table_EA3AF6A1987B4EFDBC84F265D5F47DC0"> 
  <thead> 
@@ -178,7 +178,7 @@ liste de documentation sur les Audiences Manager nouvelles et révisées publié
   </tr> 
   <tr> 
    <td colname="col1"> <a href="../reporting/audience-optimization-reports/aor-advertisers/import-dcm.md"> Importation de fichiers de données DCM dans Audience Manager</a> </td> 
-   <td colname="col2">Mettez vos<span class="keyword"> données DoubleClick Campaign Manager</span> en <span class="keyword"> Audience Manager</span>. </td> 
+   <td colname="col2">Apportez vos <span class="keyword"> données DoubleClick Campaign Manager</span> à <span class="keyword"> Audience Manager</span>. </td> 
   </tr> 
   <tr> 
    <td colname="col1"><a href="../api/dcs-intro/dcs-event-calls/dcs-event-calls.md">Méthodes et code de l’API du serveur de collecte de données (DCS) </a> </td> 
@@ -187,7 +187,7 @@ liste de documentation sur les Audiences Manager nouvelles et révisées publié
  </tbody> 
 </table>
 
-## June, 2015 {#june-15}
+## Juin 2015 {#june-15}
 
 <table id="table_285A1E3D41F245D195FC983A298F89DA"> 
  <thead> 
@@ -198,11 +198,11 @@ liste de documentation sur les Audiences Manager nouvelles et révisées publié
  </thead>
  <tbody> 
   <tr> 
-   <td colname="col1">Méthode de création <a href="../dil/dil-class-overview/dil-create.md#dil-create"></a> du code DIL. </td> 
+   <td colname="col1">Méthode de DIL <a href="../dil/dil-class-overview/dil-create.md#dil-create"> create</a>. </td> 
    <td colname="col2"> <p> 
      <ul id="ul_D4F6BB8E192E4C1BAF1B505541A1E56E"> 
       <li id="li_9C29F2E224444AC5B77B69C3BC9B26A8">Suppression du paramètre facultatif, <code> iframeAttachmentDelay</code>. </li> 
-      <li id="li_85A63519222A4423B8D7A3FF90929741">Ajouté une note à <code> declaredId</code> variable. Lors de l’utilisation du service d’identification des Visiteurs, définissez l’identifiant avec <code> setCustomerIDs</code> la valeur DIL. See <a href="https://docs.adobe.com/content/help/en/id-service/using/reference/authenticated-state.html" format="https" scope="external"> Customer IDs and Authenticated States</a>. </li> 
+      <li id="li_85A63519222A4423B8D7A3FF90929741">Ajouté une note à la variable <code> declaredId</code>. Lors de l’utilisation du service d’identification des Visiteurs, définissez l’identifiant avec <code> setCustomerIDs</code> au lieu du DIL. Voir <a href="https://docs.adobe.com/content/help/en/id-service/using/reference/authenticated-state.html" format="https" scope="external"> ID de client et états authentifiés</a>. </li> 
      </ul> </p> </td> 
   </tr> 
  </tbody> 
@@ -248,12 +248,12 @@ liste de documentation sur les Audiences Manager nouvelles et révisées publié
  </thead>
  <tbody> 
   <tr> 
-   <td colname="col1"> <p> <a href="../integration/sending-audience-data/batch-data-transfer-explained/inbound-file-contents.md"> Contenu du fichier de données entrantes : Syntaxe, variables et exemples </a> </p> </td> 
+   <td colname="col1"> <p> <a href="../integration/sending-audience-data/batch-data-transfer-explained/inbound-file-contents.md"> Contenu du fichier de données entrantes : Syntaxe, variables et exemples  </a> </p> </td> 
    <td colname="col2"> <p>Ajout de la remarque suivante : </p> <p> <p>Remarque :  <span class="keyword"> Audience Manager</span> ne prend pas en charge les fichiers .zip pour les compartiments S3 entrants. </p> </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p> <a href="../faq/faq-reporting.md"> FAQ sur la création de rapports </a> </p> </td> 
-   <td colname="col2"> <p>Ajouté une nouvelle FAQ qui explique pourquoi le nombre total d’incendies pour les caractéristiques intégrées s’affiche toujours sous la forme 0. </p> </td> 
+   <td colname="col2"> <p>Ajouté d’une nouvelle FAQ qui explique pourquoi le nombre total d’incendies pour les caractéristiques intégrées s’affiche toujours sous la forme 0. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p> <a href="../features/traits/trait-geotarget-keys.md"> Géociblage à l’aide de clés au niveau des plateformes </a> </p> </td> 
@@ -274,15 +274,15 @@ liste de documentation sur les Audiences Manager nouvelles et révisées publié
  <tbody> 
   <tr> 
    <td colname="col1"> <p> <a href="../faq/faq-reporting.md"> FAQ sur la création de rapports </a> </p> </td> 
-   <td colname="col2"> <p>Ajouté une nouvelle FAQ qui explique pourquoi le nombre d’enregistrements traités avec succès peut différer lors de la comparaison de la réception et du rapports entrants dans AAM. </p> <p>Ajouté une nouvelle FAQ qui explique pourquoi les caractéristiques uniques de mes caractéristiques embarquées sur plusieurs périphériques sont supérieures au nombre total d'enregistrements embarqués. </p> </td> 
+   <td colname="col2"> <p>Ajouté une nouvelle FAQ qui explique pourquoi le nombre d'enregistrements traités avec succès peut différer lors de la comparaison du reçu et du rapports de trafic entrant en AAM. </p> <p>Ajouté une nouvelle FAQ qui explique pourquoi les caractéristiques uniques de mes caractéristiques embarquées sur plusieurs périphériques sont supérieures au nombre total d'enregistrements embarqués. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p> <a href="../reference/system-components/components-overview.md">Composants système </a> </p> </td> 
-   <td colname="col2"> <p>Suppression des informations sur Talend. </p> <p>Suppression des informations sur Netezza et remplacement de cette dernière par des informations sur RedShift. </p> </td> 
+   <td colname="col2"> <p>Suppression des informations sur Talend. </p> <p>Suppression des informations sur Netezza et remplacement de celles sur RedShift. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p> Rétention des données </p> </td> 
-   <td colname="col2"> <p>Nouvelle rubrique. </p> <p>Modification de la section FAQ <a href="../faq/faq-privacy.md"></a> sur la confidentialité et la rétention des données (12/2016). </p> </td> 
+   <td colname="col2"> <p>Nouvelle rubrique. </p> <p>Modifié en <a href="../faq/faq-privacy.md"> FAQ sur la confidentialité et la rétention des données</a> (12/2016). </p> </td> 
   </tr> 
  </tbody> 
 </table>
@@ -298,7 +298,7 @@ liste de documentation sur les Audiences Manager nouvelles et révisées publié
  </thead>
  <tbody> 
   <tr> 
-   <td colname="col1"> <p> <a href="../reference/reporting-file-transfer-timeframe.md"> Lignes directrices sur la période de Rapports et de transfert de fichiers </a> </p> </td> 
+   <td colname="col1"> <p> <a href="../reference/reporting-file-transfer-timeframe.md"> Lignes directrices sur la période de rapports et de transfert de fichiers  </a> </p> </td> 
    <td colname="col2"> <p>Mise à jour des heures d’importation quotidienne des fichiers entrants et d’exportation des fichiers sortants. </p> </td> 
   </tr> 
   <tr> 
@@ -310,7 +310,7 @@ liste de documentation sur les Audiences Manager nouvelles et révisées publié
    <td colname="col2"> <p>Ajouté les informations suivantes à la section Limitations et règles : </p> <p> 
      <ul id="ul_2451A3EAA05E4961AA7EA90026F353F5"> 
       <li id="li_0B524C6767274E1BAADEE0833DA00C84"> <p>Les expressions de plafonnement des fréquences incluent tous les utilisateurs dont le nombre de réalisations de caractéristiques est inférieur à une valeur souhaitée. </p> <p>Par exemple : </p> <p> <code> frequency([1000T]) &lt;= 5</code> </p> <p>Cette expression inclut tous les utilisateurs qui ont réalisé la caractéristique avec l’ID "1 000" moins de cinq fois, y compris ceux qui n’ont pas réalisé la caractéristique. </p> </li> 
-      <li id="li_F957554820B6454FA9756267C4D09AAD"> <p>Lorsque vous avez besoin de récence/fréquence inférieure à un nombre spécifique de fois ou de jours, vous devez joindre cette caractéristique à une autre avec un opérateur ET. </p> <p>A l’aide de l’exemple ci-dessus, <code> frequency([1000T]) &lt;= 5</code>l’expression devient valide lorsqu’elle est associée à une autre caractéristique. </p> <p>Par exemple : </p> <p> <code> frequency([1000T]) &lt;= 5 AND isSiteVisitorTrait</code> </p> </li> 
+      <li id="li_F957554820B6454FA9756267C4D09AAD"> <p>Lorsque vous avez besoin de récence/fréquence inférieure à un nombre spécifique de fois ou de jours, vous devez joindre cette caractéristique à une autre avec un opérateur ET. </p> <p>À l’aide de l’exemple ci-dessus, <code> frequency([1000T]) &lt;= 5</code>, l’expression devient valide lorsqu’elle est associée à une autre caractéristique. </p> <p>Par exemple : </p> <p> <code> frequency([1000T]) &lt;= 5 AND isSiteVisitorTrait</code> </p> </li> 
       <li id="li_BAEC874C0B6E4232A83C7228E84A7AD0"> <p>Pour les cas d’utilisation du plafonnement de la fréquence des publicités, vous pouvez créer une règle de segmentation semblable à celle-ci : </p> <p> <code> (frequency([1000T] &lt;= 2D) &gt;= 5)?</code> </p> <p>Cette expression inclut tous les utilisateurs qui ont réalisé plus de cinq fois la caractéristique avec l’ID "1000" au cours des deux derniers jours. </p> <p>Vous pouvez atteindre le plafond en envoyant ce segment au serveur d’annonces, puis en incluant un SAUF sur le segment dans le serveur d’annonces. Cette approche permet d'obtenir de meilleures performances en Audience Manager, tout en poursuivant le même objectif pour le plafonnement des fréquences. </p> </li> 
      </ul> </p> </td> 
   </tr> 
@@ -336,7 +336,7 @@ liste de documentation sur les Audiences Manager nouvelles et révisées publié
    <td colname="col2"> <p>Nouvelle rubrique. </p> </td> 
   </tr> 
   <tr> 
-   <td colname="col1"> <p> <a href="../faq/faq-inbound-data-ingestion.md"> Ingestion des données CRM entrantes </a> </p> </td> 
+   <td colname="col1"> <p> <a href="../faq/faq-inbound-data-ingestion.md"> Ingestion des données CRM entrantes  </a> </p> </td> 
    <td colname="col2"> <p>Clarification de la durée nécessaire à la propagation des données entrantes vers le bord. </p> <p>Rubrique considérablement modifiée. </p> </td> 
   </tr> 
   <tr> 
@@ -345,10 +345,10 @@ liste de documentation sur les Audiences Manager nouvelles et révisées publié
   </tr> 
   <tr> 
    <td colname="col1"> <p> <a href="../reporting/general-reports.md#general-reports-overview"> Rapports généraux </a> </p> </td> 
-   <td colname="col2"> <p>Section Ajoutée expliquant comment les nombres des rapports <span class="wintitle"></span> généraux sont générés. </p> </td> 
+   <td colname="col2"> <p>Section Ajoutée expliquant comment des nombres dans <span class="wintitle"> Rapports généraux</span> sont générés. </p> </td> 
   </tr> 
   <tr> 
-   <td colname="col1"> <p> <a href="../dil/dil-modules.md#sitecat-init"> siteCatalyst.init </a> </p> </td> 
+   <td colname="col1"> <p> <a href="../dil/dil-modules.md#sitecat-init"> siteCatalyst.init  </a> </p> </td> 
    <td colname="col2"> <p>Ajouté une option qui exclut les informations d’identification personnelle. </p> </td> 
   </tr> 
   <tr> 
@@ -356,23 +356,23 @@ liste de documentation sur les Audiences Manager nouvelles et révisées publié
    <td colname="col2"> <p>Informations Ajoutées expliquant pourquoi il pourrait y avoir une différence entre la population de segments en temps réel et les valeurs uniques. </p> </td> 
   </tr> 
   <tr> 
-   <td colname="col1"> <p>Activation de la fusion de Profils client </p> </td> 
-   <td colname="col2"> <p>Ajout d’une étape supplémentaire Ajoutée pour expliquer comment ajouter l’utilisation des ID déclarés à DIL et au SDK mobile. </p> <p>Ce document a été abandonné et remplacé par <a href="../features/profile-merge-rules/merge-rules-start.md"> Créer une source</a>de données sur plusieurs périphériques. </p> </td> 
+   <td colname="col1"> <p>Activation de la fusion de profils client </p> </td> 
+   <td colname="col2"> <p>Ajout d’une étape supplémentaire Ajoutée pour expliquer comment ajouter l’utilisation des ID déclarés au DIL et au kit Mobile SDK. </p> <p>Ce document a été abandonné et remplacé par <a href="../features/profile-merge-rules/merge-rules-start.md"> Créer une source de données sur plusieurs périphériques</a>. </p> </td> 
   </tr> 
   <tr> 
-   <td colname="col1"> <p> <a href="../integration/sending-audience-data/batch-data-transfer-explained/inbound-file-contents.md"> Contenu du fichier de données entrantes : Syntaxe, variables et exemples </a> </p> </td> 
+   <td colname="col1"> <p> <a href="../integration/sending-audience-data/batch-data-transfer-explained/inbound-file-contents.md"> Contenu du fichier de données entrantes : Syntaxe, variables et exemples  </a> </p> </td> 
    <td colname="col2"> <p>Rubrique amendée. </p> </td> 
   </tr> 
   <tr> 
-   <td colname="col1"> <p> Architecture de fusion de Profils </p> </td> 
-   <td colname="col2"> <p>Mise à jour du texte et ajout d’illustrations. </p> <p>Ce document a été abandonné et remplacé par Lien <a href="../features/profile-merge-rules/merge-rules-overview.md"></a>de Profil. </p> </td> 
+   <td colname="col1"> <p> Architecture de fusion de profils </p> </td> 
+   <td colname="col2"> <p>Mise à jour du texte et ajout d’illustrations. </p> <p>Ce document a été abandonné et remplacé par <a href="../features/profile-merge-rules/merge-rules-overview.md"> Profil Link</a>. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p> <a href="../features/segments/recency-and-frequency.md"> Récence et fréquence </a> </p> </td> 
    <td colname="col2"> <p>Puce Ajoutée expliquant que vous pouvez configurer les exigences de fréquence sans configurer les exigences de récence en laissant vide la récence. </p> </td> 
   </tr> 
   <tr> 
-   <td colname="col1"> <p> <a href="../integration/receiving-audience-data/batch-outbound-transfers/outbound-file-name-contents.md#outbound-contents-syntax"> Contenu du fichier de données sortantes : Syntaxe et paramètres </a> </p> </td> 
+   <td colname="col1"> <p> <a href="../integration/receiving-audience-data/batch-outbound-transfers/outbound-file-name-contents.md#outbound-contents-syntax"> Contenu du fichier de données sortantes : Syntaxe et paramètres  </a> </p> </td> 
    <td colname="col2"> <p>Informations Ajoutées sur les segments supprimés dans les fichiers sortants. </p> </td> 
   </tr> 
   <tr> 
