Updating Old File for core commit

--- a/help/using/docs-updates/docs-2020.md
+++ b/help/using/docs-updates/docs-2020.md
@@ -21,37 +21,37 @@ Une liste de la documentation nouvelle ou révisée publiée en 2020. Inclut des
 Consultez les [Notes de mise à jour d’Experience Cloud](https://docs.adobe.com/content/help/fr-FR/release-notes/experience-cloud/current.html) pour prendre connaissance des modifications apportées à [!DNL Audience Manager] et aux autres solutions d’[!DNL Experience Cloud]. Pour consulter les anciennes notes de mise à jour, reportez-vous à la section [Années précédentes](../docs-updates/docs-2019.md).
 
 
-## October, 2020 {#aam-october-updates}
+## Octobre 2020 {#aam-october-updates}
 
 | Rubrique | Description |
 |----|----|
-| [Audiences prédictives](/help/using/features/algorithmic-models/predictive-audiences.md) | <ul><li>**Clonage** de modèle des Audiences prédictives : Vous pouvez désormais cloner des modèles existants et modifier leur configuration en fonction de vos besoins. Pour plus d’informations, consultez [Clonage et modification de modèles](/help/using/features/algorithmic-models/predictive-audiences.md#clone-predictive-audiences) d’Audience prédictifs.</li><li>**Classification** par lots des Audiences prédictives : Outre la classification des visiteurs selon des personnalités distinctes en temps réel, les Audiences prédictives prennent désormais en charge la classification par lot, ce qui vous permet de classer les utilisateurs intégrés et de les activer dans les destinations par lot.</li></ul> |
-| [Rapports de chevauchement](/help/using/reporting/dynamic-reports/dynamic-reports.md) | Nous avons mis à jour la méthodologie que nous utilisons pour calculer les rapports de chevauchement ([Caractéristique à Caractéristique](/help/using/reporting/dynamic-reports/trait-trait-overlap-report.md), [Segment à Caractéristique](/help/using/reporting/dynamic-reports/segment-trait-overlap-report.md), [Segment à Segment](/help/using/reporting/dynamic-reports/segment-segment-overlap-report.md)). Le calcul des rapports de chevauchement est désormais basé sur les signatures de rapports et de hachage minimum (plutôt que sur l’échantillonnage [de données](/help/using/reporting/report-sampling.md#data-sampling-ratio)1/54). |
+| [Audiences prédictives](/help/using/features/algorithmic-models/predictive-audiences.md) | <ul><li>**Clonage** de modèle des Audiences prédictives : Vous pouvez désormais cloner des modèles existants et modifier leur configuration en fonction de vos besoins. Pour plus d&#39;informations, consultez [Clonage et modification des modèles d&#39;Audience prédictive](/help/using/features/algorithmic-models/predictive-audiences.md#clone-predictive-audiences).</li><li>**Classification** par lots des Audiences prédictives : Outre la classification des visiteurs selon des personnalités distinctes en temps réel, les Audiences prédictives prennent désormais en charge la classification par lot, ce qui vous permet de classer les utilisateurs intégrés et de les activer dans les destinations par lot.</li></ul> |
+| [Rapports de chevauchement](/help/using/reporting/dynamic-reports/dynamic-reports.md) | Nous avons mis à jour la méthodologie que nous utilisons pour calculer les rapports de chevauchement ([Caractéristique à caractéristique](/help/using/reporting/dynamic-reports/trait-trait-overlap-report.md), [Segment à caractéristique](/help/using/reporting/dynamic-reports/segment-trait-overlap-report.md), [Segment à segment](/help/using/reporting/dynamic-reports/segment-segment-overlap-report.md)). Le calcul des rapports de chevauchement est désormais basé sur les signatures de rapports et de hachage minimum (plutôt que sur [l’échantillonnage de données 1/54](/help/using/reporting/report-sampling.md#data-sampling-ratio)). |
 
 
-## September, 2020 {#aam-september-updates}
+## Septembre 2020 {#aam-september-updates}
 
 | Rubrique | Description |
 |---- |----|
 | [Accessibilité dans l&#39;Audience Manager](/help/using/overview/accessibility-in-aam.md) | L&#39;accessibilité se rapporte à une série de fonctions qui rendent un produit logiciel utilisable, avec le moins d&#39;effort possible de la part d&#39;utilisateurs ayant divers handicaps, tels que visuels, auditifs, cognitifs, moteurs ou autres. Pour faciliter l&#39;utilisation de l&#39;Audience Manager pour tous, nous avons développé la prise en charge de plusieurs fonctions d&#39;accessibilité, détaillées dans cet article. |
-| [Noms de fichiers](/help/using/integration/sending-audience-data/batch-data-transfer-explained/inbound-s3-filenames.md) S3 entrants et noms de fichiers FTP [entrants](/help/using/integration/sending-audience-data/batch-data-transfer-explained/inbound-ftp-filenames.md) | Nous avons mis à jour les définitions et fourni des exemples pour les champs `DPID` et `DPID_TARGET_DATA_OWNER` dans la syntaxe des noms de fichier. |
+| [Nom ](/help/using/integration/sending-audience-data/batch-data-transfer-explained/inbound-s3-filenames.md) de fichier S3 entrant et nom de fichier FTP  [entrant](/help/using/integration/sending-audience-data/batch-data-transfer-explained/inbound-ftp-filenames.md) | Nous avons mis à jour les définitions et fourni des exemples pour les champs `DPID` et `DPID_TARGET_DATA_OWNER` dans la syntaxe du nom de fichier. |
 
-## August, 2020 {#aam-august-updates}
+## Août 2020 {#aam-august-updates}
 
 | Rubrique | Description |
 |---- |----|
-| [Correspondance client Google pour les destinations basées sur les personnes](../features/destinations/people-based-destinations-prerequisites.md#gcm) | Vous pouvez désormais utiliser [!UICONTROL People-Based Destinations] pour cible les utilisateurs via [!DNL Google Customer Match]. Avant de pouvoir utiliser [!UICONTROL People-Based Destinations] l’envoi de segments d’audience propriétaires vers une [!DNL Google Customer Match] destination, il est obligatoire de [!DNL Google] vous ajouter à leur liste autorisée. Pour plus d’informations, consultez la documentation sur les destinations [](../features/destinations/people-based-destinations-prerequisites.md#gcm) basées sur les personnes. |
-| [Nouveaux serveurs SFTP](../faq/faq-data-collection.md) | Vous pouvez désormais utiliser les nouveaux [!DNL SFTP] serveurs ([!DNL ftp-in-gtw] et [!DNL ftp-out-gtw]) qui utilisent [!DNL AWS SFTP Gateway] sur [!DNL S3]. |
+| [Correspondance client Google pour les destinations basées sur les personnes](../features/destinations/people-based-destinations-prerequisites.md#gcm) | Vous pouvez désormais utiliser [!UICONTROL People-Based Destinations] pour cible des utilisateurs via [!DNL Google Customer Match]. Avant de pouvoir utiliser [!UICONTROL People-Based Destinations] pour envoyer vos segments d&#39;audience propriétaire vers une destination [!DNL Google Customer Match], il est obligatoire que [!DNL Google] vous ajoute à leur liste autorisée. Pour plus d’informations, consultez la documentation [Destinations basées sur les personnes](../features/destinations/people-based-destinations-prerequisites.md#gcm). |
+| [Nouveaux serveurs SFTP](../faq/faq-data-collection.md) | Vous pouvez désormais utiliser les nouveaux serveurs [!DNL SFTP] ([!DNL ftp-in-gtw] et [!DNL ftp-out-gtw]) qui utilisent [!DNL AWS SFTP Gateway] sur [!DNL S3]. |
 
 
-## July, 2020 {#aam-july-updates}
+## Juillet 2020 {#aam-july-updates}
 
 | Rubrique | Description |
 |---- |----|
 | [Partage d’audiences entre Audience Manager et Adobe Experience Platform](/help/using/integration/integration-aep/aam-aep-audience-sharing.md#aep-aam-segment-population-differences) | La nouvelle section, **Comprendre les différences de population des segments entre l&#39;Audience Manager et l&#39;Experience Platform**, décrit les raisons possibles pour lesquelles le nombre de populations peut varier entre l&#39;Experience Platform et l&#39;Audience Manager. |
-| [Prise en main des API REST d’Audience Manager](/help/using/api/rest-api-main/aam-api-getting-started.md#jwt) | Nous avons ajouté une nouvelle section, **JWT (Service Account) Authentication using[!DNL Adobe I/O]**. Reportez-vous à cette section pour vous authentifier auprès des API d’Audience Manager utilisant [!DNL Adobe I/O]. |
+| [Prise en main des API REST d’Audience Manager](/help/using/api/rest-api-main/aam-api-getting-started.md#jwt) | Nous avons ajouté une nouvelle section, **Authentification JWT (Service Account) à l&#39;aide de[!DNL Adobe I/O]**. Reportez-vous à cette section pour vous authentifier auprès des API d&#39;Audience Manager à l&#39;aide de [!DNL Adobe I/O]. |
 
-## June, 2020 {#aam-june-updates}
+## Juin 2020 {#aam-june-updates}
 
 | Rubrique | Description |
 |---- |----|
