Updating Old File for core commit

--- a/help/using/docs-updates/docs-2019.md
+++ b/help/using/docs-updates/docs-2019.md
@@ -1,6 +1,6 @@
 ---
-description: liste de documents nouveaux ou révisés publiés en 2019 et les années précédentes. Inclut des mises à jour mineures de la documentation d’Audience Manager qui pourraient ne pas figurer dans les notes de mise à jour d’Experience Cloud.
-seo-description: liste de documents nouveaux ou révisés publiés en 2019 et les années précédentes. Inclut des mises à jour mineures de la documentation d’Audience Manager qui pourraient ne pas figurer dans les notes de mise à jour d’Experience Cloud.
+description: Liste de documents nouveaux ou révisés publiés en 2019 et les années précédentes. Inclut des mises à jour mineures de la documentation d’Audience Manager qui pourraient ne pas figurer dans les notes de mise à jour d’Experience Cloud.
+seo-description: Liste de documents nouveaux ou révisés publiés en 2019 et les années précédentes. Inclut des mises à jour mineures de la documentation d’Audience Manager qui pourraient ne pas figurer dans les notes de mise à jour d’Experience Cloud.
 seo-title: Mises à jour de la documentation 2019
 solution: Audience Manager
 title: Mises à jour de la documentation 2019
@@ -21,30 +21,30 @@ Une liste de la documentation nouvelle ou révisée publiée en 2019. Inclut des
 
 Consultez les [Notes de mise à jour d’Experience Cloud](https://docs.adobe.com/content/help/fr-FR/release-notes/experience-cloud/current.html) pour prendre connaissance des modifications apportées à [!DNL Audience Manager] et aux autres solutions d’[!DNL Experience Cloud]. Pour consulter les anciennes notes de mise à jour, reportez-vous à la section [Années précédentes](../docs-updates/docs-2018.md).
 
-## November, 2019 {#aam-november-updates}
+## Novembre 2019 {#aam-november-updates}
 
 | Rubrique | Description |
 |--- |----|
-| [Révision de la documentation d’assistance et de confidentialité de la California Consumer Privacy Act (CCPA)](../overview/data-security-and-privacy/data-privacy.md) | The [California Consumer Privacy Act (CCPA)](https://www.caprivacy.org/about), going into effect on January 1st, 2020, will provide California residents new rights regarding their personal information and will impose data protection responsibilities on certain entities that conduct business in California. <br> <br> L’Audience Manager vous aide à respecter vos obligations en vertu de la réglementation sur la protection des renseignements personnels, par le biais d’outils de protection des renseignements personnels tels que l’ [Adobe Experience Platform Privacy Service](https://docs.adobe.com/content/help/fr-FR/experience-platform/privacy/home.html) pour l’accès aux données et la suppression des requêtes. <br><br> Nous avons mis à jour le processus actuel de gestion [des](../overview/data-security-and-privacy/data-privacy-requests.md#opt-out-requests) exclusions afin d’inclure l’exclusion de tout identifiant déclaré (par ex. identifiant de gestion de la relation client). Dans le cas d’une exclusion par identifiant déclaré, l’identifiant déclaré et le dernier périphérique lié seront désactivés de la collecte de données d’Audience Manager. Les demandes d’exclusion envoient désormais également des demandes de non-segmentation aux partenaires [de](../overview/data-security-and-privacy/assets/AAM-Partners-October2019.xlsx) destination qui prennent en charge cette fonctionnalité, à la fois en lot et en temps réel. <br><br> De plus, nous avons remanié notre documentation sur la sécurité [des](../overview/data-security-and-privacy/data-security.md)données, la confidentialité [des](../overview/data-security-and-privacy/data-privacy.md)données et la gouvernance [des](../overview/data-security-and-privacy/data-governance.md) données afin de vous permettre de trouver plus facilement les informations requises pour se conformer aux réglementations susmentionnées. |
+| [Révision de la documentation d’assistance et de confidentialité de la California Consumer Privacy Act (CCPA)](../overview/data-security-and-privacy/data-privacy.md) | La loi sur la protection des renseignements personnels des consommateurs de la Californie [qui entrera en vigueur le 1er janvier 2020, conférera aux résidents de la Californie de nouveaux droits sur leurs renseignements personnels et imposera des responsabilités en matière de protection des données à certaines entités qui exercent des activités en Californie. <br>](https://www.caprivacy.org/about) <br> L’Audience Manager vous aide à respecter vos obligations en vertu de la réglementation sur la confidentialité, par le biais d’outils de confidentialité tels que le  [Service de ](https://docs.adobe.com/content/help/fr-FR/experience-platform/privacy/home.html) confidentialité de Adobe Experience Platform pour l’accès aux données et la suppression des requêtes. <br><br> Nous avons mis à jour le processus actuel de gestion des  [exclusions ](../overview/data-security-and-privacy/data-privacy-requests.md#opt-out-requests) afin d’inclure l’exclusion de tout identifiant déclaré (par ex. identifiant de gestion de la relation client). Dans le cas d’une exclusion par identifiant déclaré, l’identifiant déclaré et le dernier périphérique lié seront désactivés de la collecte de données d’Audience Manager. Les demandes d’exclusion envoient désormais également des demandes de non-segmentation à [partenaires de destination](../overview/data-security-and-privacy/assets/AAM-Partners-October2019.xlsx) qui prennent en charge cette fonction, à la fois en temps réel et par lot. <br><br> De plus, nous avons remanié notre  [Data Security](../overview/data-security-and-privacy/data-security.md),  [Data Privacy](../overview/data-security-and-privacy/data-privacy.md) et notre documentation  [Data ](../overview/data-security-and-privacy/data-governance.md) Governance, afin de vous permettre de trouver plus facilement les informations nécessaires pour se conformer aux règlements susmentionnés. |
 
-## October, 2019 {#aam-october-updates}
+## Octobre 2019 {#aam-october-updates}
 
 | Rubrique | Description |
 |--- |----|
-| [Recommandations intelligentes des données d’Audience Marketplace, alimentées par Adobe Sensei](../features/segments/trait-recommendations.md) | Avec les recommandations de caractéristiques, lorsque vous créez ou modifiez un segment dans le créateur [de](../features/segments/segment-builder.md)segments, vous obtenez maintenant des recommandations sur les caractéristiques supplémentaires que vous pouvez inclure, à partir de flux de [!UICONTROL Audience Marketplace] données auxquels vous n’êtes pas abonné. Ajoutez les caractéristiques recommandées à votre segment pour élargir votre audience cible. <br>  De plus, nous avons repensé la [!UICONTROL Marketplace] page pour vous faciliter la recherche de caractéristiques similaires et le filtrage des flux de données. |
+| [Recommandations intelligentes des données d’Audience Marketplace, alimentées par Adobe Sensei](../features/segments/trait-recommendations.md) | Avec Trait Recommendations, lorsque vous créez ou modifiez un segment dans [Créateur de segments](../features/segments/segment-builder.md), vous obtenez maintenant des recommandations sur les caractéristiques supplémentaires que vous pouvez inclure, à partir de flux de données [!UICONTROL Audience Marketplace] auxquels vous n’êtes pas abonné. Ajoutez les caractéristiques recommandées à votre segment pour élargir votre audience cible. <br>  De plus, nous avons repensé la  [!UICONTROL Marketplace] page pour vous faciliter la recherche de caractéristiques similaires et le filtrage des flux de données. |
 | [Outils de gestion en bloc](/help/using/reference/bulk-management-tools/bulk-management-intro.md) | Nous avons publié une nouvelle version de la feuille de calcul de gestion en bloc qui fonctionne sur les systèmes d&#39;exploitation MacOS et Microsoft Windows et prend en charge la connexion des Experience Cloud. |
-| [Améliorations des stratégies de fusion de profil](../features/profile-merge-rules/merge-rules-overview.md) | Nous avons publié une série d&#39;améliorations pour [!UICONTROL Profile Merge Rules]: <ul><li>L’évaluation des segments est désormais prise en charge par lot pour 100 périphériques au maximum.</li><li>Nous avons amélioré la précision des rapports pour les populations de caractéristiques et de segments.</li><li>Nous avons amélioré la précision des fichiers de commandes générés à l&#39;aide d&#39;ID inter-périphériques.</li><li>Nous avons mis à jour la documentation avec des cas d&#39;utilisation plus détaillés pour chaque règle. Voir Cas d’utilisation [généraux pour les règles](../features/profile-merge-rules/merge-rule-targeting-options.md)de fusion de Profils, les Cas [d’utilisation de graphiques de périphériques](../features/profile-merge-rules/external-graph-use-cases.md)externes et les Cas [d’utilisation de graphiques de périphériques de lien de](../features/profile-merge-rules/profile-link-use-case.md)Profil.</li></ul> |
+| [Améliorations des stratégies de fusion de profil](../features/profile-merge-rules/merge-rules-overview.md) | Nous avons publié une série d&#39;améliorations pour [!UICONTROL Profile Merge Rules] : <ul><li>L’évaluation des segments est désormais prise en charge par lot pour 100 périphériques au maximum.</li><li>Nous avons amélioré la précision des rapports pour les populations de caractéristiques et de segments.</li><li>Nous avons amélioré la précision des fichiers de commandes générés à l&#39;aide d&#39;ID inter-périphériques.</li><li>Nous avons mis à jour la documentation avec des cas d&#39;utilisation plus détaillés pour chaque règle. Voir [Cas d&#39;utilisation générale des règles de fusion de Profils](../features/profile-merge-rules/merge-rule-targeting-options.md), [Cas d&#39;utilisation de graphiques de périphériques externes](../features/profile-merge-rules/external-graph-use-cases.md) et [Cas d&#39;utilisation de graphiques de périphériques de lien de Profil](../features/profile-merge-rules/profile-link-use-case.md).</li></ul> |
 
 
-## September, 2019 {#aam-september-updates}
+## Septembre 2019 {#aam-september-updates}
 
 | Rubrique | Description |
 |--- |----|
-| [HTTP Strict Transport Security](../overview/data-security-and-privacy/data-security.md#hsts) | Nous avons ajouté la prise en charge de [!DNL HTTP Strict-Transport-Security], une stratégie de sécurité Web qui protège contre le détournement de cookies et les attaques par déclassement de protocole. |
+| [HTTP Strict Transport Security](../overview/data-security-and-privacy/data-security.md#hsts) | Nous avons ajouté la prise en charge de [!DNL HTTP Strict-Transport-Security], une stratégie de sécurité Web qui protège contre le détournement de cookies et les attaques de dégradation de protocole. |
 | [Récence et fréquence](/help/using/features/segments/recency-and-frequency.md) | Nous avons mis à jour les exemples de plafonnement des fréquences dans l’article et ajouté des exemples de fonctionnement de la récence. |
-| <ul><li>[Créateur de segments](/help/using/features/segments/segment-builder.md)</li><li>[Rapports au niveau du segment dans l’Audience Marketplace](/help/using/features/audience-marketplace/marketplace-data-buyers/marketplace-buyer-billing.md)</li><li>[Rapports d&#39;identité de l&#39;Audience dans la vue de résumé des caractéristiques ](/help/using/features/traits/trait-details-page.md)</li><li>[Rapports d&#39;identité de l&#39;Audience dans la vue de résumé des segments ](/help/using/features/segments/segment-summary-view.md)</li><li>[Comment créer des caractéristiques de conversion](/help/using/features/traits/create-onboarded-rule-based-traits.md)</li><li>[Recommandations de caractéristiques](/help/using/features/segments/trait-recommendations.md)</li></ul> | Nous avons ajouté des vidéos didacticielles à plusieurs pages dans la documentation de l’Audience Manager. |
+| <ul><li>[Créateur de segments](/help/using/features/segments/segment-builder.md)</li><li>[Rapports au niveau du segment dans l’Audience Marketplace](/help/using/features/audience-marketplace/marketplace-data-buyers/marketplace-buyer-billing.md)</li><li>[Rapports d&#39;identité de l&#39;Audience dans la vue de résumé des caractéristiques  ](/help/using/features/traits/trait-details-page.md)</li><li>[Rapports d&#39;identité de l&#39;Audience dans la vue de résumé des segments  ](/help/using/features/segments/segment-summary-view.md)</li><li>[Comment créer des caractéristiques de conversion](/help/using/features/traits/create-onboarded-rule-based-traits.md)</li><li>[Recommandations de caractéristiques](/help/using/features/segments/trait-recommendations.md)</li></ul> | Nous avons ajouté des vidéos didacticielles à plusieurs pages dans la documentation de l’Audience Manager. |
 
-## August, 2019 {#aam-august-updates}
+## Août 2019 {#aam-august-updates}
 
 | Rubrique | Description |
 |--- |----|
@@ -52,15 +52,15 @@ Consultez les [Notes de mise à jour d’Experience Cloud](https://docs.adobe.co
 | [Configuration d’Audiences personnalisées Twitter en tant que destination en libre-service basée sur un périphérique](../features/destinations/twitter-tailored-audiences.md) | Nous migrons les destinations Twitter vers un modèle de configuration en libre-service. Cet article explique ce que vous devez faire pour que les intégrations Twitter existantes continuent à fonctionner après la migration. |
 | [Exemples de facturation des Audiences Marketplace](../features/audience-marketplace/marketplace-data-buyers/marketplace-buyer-billing.md#billing-examples) | Nous avons ajouté un nouvel exemple, le cas 3, dans lequel nous détaillons le fonctionnement de la facturation pour les segments avec activation et modélisation des cas d’utilisation. |
 
-## July, 2019 {#aam-july-updates}
+## Juillet 2019 {#aam-july-updates}
 
 Il n&#39;y a pas de mises à jour majeures de la documentation à annoncer pour juillet.
 
-## June, 2019 {#aam-june-updates}
+## Juin 2019 {#aam-june-updates}
 
 | Rubrique | Description |
 |--- |----|
-| [Page d’accueil des destinations](/help/using/features/destinations/destinations-home.md) | Le landing page [Destinations](https://bank.demdex.com/portal/destinations/all) a un nouveau look. Lisez cette page pour en savoir plus sur la nouvelle mise en page. |
+| [Page d’accueil des destinations](/help/using/features/destinations/destinations-home.md) | Le landing page [Destinations](https://bank.demdex.com/portal/destinations/all) a une nouvelle apparence. Lisez cette page pour en savoir plus sur la nouvelle mise en page. |
 
 ## Mai 2019 {#aam-may-updates}
 
@@ -68,9 +68,9 @@ Il n&#39;y a pas de mises à jour majeures de la documentation à annoncer pour 
 |--- |----|
 | [API d&#39;Audience Manager](/help/using/api/rest-api-main/rest-api-main.md) | Nous sommes en train de [migrer toutes nos API](/help/using/api/api-swagger-migration.md) de la documentation du produit vers l’API Swagger. Les deux dernières API que nous avons migrées sont les suivantes : <ul><li>[API Modèles algorithmiques](https://bank.demdex.com/portal/swagger/index.html#/Algorithmic_Models_API)</li><li>[API Signaux dérivés](https://bank.demdex.com/portal/swagger/index.html#/Derived_Signals_API)</li></ul> |
 | [Flux de données privés](/help/using/features/audience-marketplace/marketplace-private-feeds.md#set-up-sharing-relationship) | Nous avons amélioré la documentation relative au partage de données propriétaires en utilisant des flux de données privés. Reportez-vous à la nouvelle section Comment configurer la relation de partage entre le fournisseur de données et l’acheteur de données. |
-| [Création d’une source de données sur plusieurs périphériques](/help/using/features/profile-merge-rules/merge-rules-start.md#settings) | Nous avons introduit un nouveau contrôle dans le processus pour créer ou modifier une source de données sur plusieurs périphériques, Rétention des **données pour les ID** de client inactifs. Vous pouvez maintenant définir la période de rétention des données pour les ID de client inactifs, en déterminant la durée pendant laquelle l’Audience Manager conserve les ID de client dans notre base de données après leur dernière consultation sur la plateforme d’Audience Manager. |
+| [Création d’une source de données sur plusieurs périphériques](/help/using/features/profile-merge-rules/merge-rules-start.md#settings) | Nous avons introduit un nouveau contrôle dans le processus pour créer ou modifier une source de données sur plusieurs périphériques, **Rétention des données pour les ID de client inactifs**. Vous pouvez maintenant définir la période de rétention des données pour les ID de client inactifs, en déterminant la durée pendant laquelle l’Audience Manager conserve les ID de client dans notre base de données après leur dernière consultation sur la plateforme d’Audience Manager. |
 | [Limites d’utilisation](/help/using/features/administration/usage-limits.md) | Nous avons mis à jour la façon dont Audience Manager traite la limite des modèles algorithmiques. Audience Manager compte désormais uniquement les modèles algorithmiques *actifs* par rapport à la limite. |
-| [Intégrations personnalisées des partenaires](/help/using/integration/sending-audience-data/custom-partner-integrations.md) | Cette page répertorie les intégrations personnalisées entre Audience Manager et les partenaires de données. <br> Oracle Data Cloud - L&#39;Audience Manager ingère des cookies et des données d&#39;ID de mobile à partir d&#39;Oracle Data Cloud pour Audience Marketplace via des fichiers de données entrants. Les spécifications d’intégration personnalisées décrites sur cette page font uniquement référence aux fichiers de données entrants contenant des ID mobiles (IDFA et ID de périphérique Android). |
+| [Intégrations personnalisées des partenaires](/help/using/integration/sending-audience-data/custom-partner-integrations.md) | Cette page répertorie les intégrations personnalisées entre Audience Manager et les partenaires de données. <br> Oracle Data Cloud - L’Audience Manager ingère des cookies et des données d’ID de mobile à partir de Oracle Data Cloud pour Audience Marketplace via des fichiers de données entrants. Les spécifications d’intégration personnalisées décrites sur cette page font uniquement référence aux fichiers de données entrants contenant des ID mobiles (IDFA et ID de périphérique Android). |
 
 ## Avril 2019 {#aam-april-updates}
 
