Updating Old File for core commit

--- a/help/using/docs-updates/docs-2018.md
+++ b/help/using/docs-updates/docs-2018.md
@@ -1,6 +1,6 @@
 ---
-description: liste de documents nouveaux ou révisés publiés en 2018 et les années précédentes. Inclut des mises à jour mineures de la documentation d’Audience Manager qui pourraient ne pas figurer dans les notes de mise à jour d’Experience Cloud.
-seo-description: liste de documents nouveaux ou révisés publiés en 2018 et les années précédentes. Inclut des mises à jour mineures de la documentation d’Audience Manager qui pourraient ne pas figurer dans les notes de mise à jour d’Experience Cloud.
+description: Liste de documents nouveaux ou révisés publiés en 2018 et les années précédentes. Inclut des mises à jour mineures de la documentation d’Audience Manager qui pourraient ne pas figurer dans les notes de mise à jour d’Experience Cloud.
+seo-description: Liste de documents nouveaux ou révisés publiés en 2018 et les années précédentes. Inclut des mises à jour mineures de la documentation d’Audience Manager qui pourraient ne pas figurer dans les notes de mise à jour d’Experience Cloud.
 seo-title: Mises à jour de la documentation 2018
 solution: Audience Manager
 title: Mises à jour de la documentation 2018
@@ -17,11 +17,11 @@ ht-degree: 48%
 
 # Mises à jour de la documentation 2018 {#documentation-updates}
 
-liste de documents nouveaux ou révisés publiés en 2018 et les années précédentes. Inclut des mises à jour mineures de la documentation d’Audience Manager qui pourraient ne pas figurer dans les notes de mise à jour d’Experience Cloud.
+Liste de documents nouveaux ou révisés publiés en 2018 et les années précédentes. Inclut des mises à jour mineures de la documentation d’Audience Manager qui pourraient ne pas figurer dans les notes de mise à jour d’Experience Cloud.
 
 Consultez les [Notes de mise à jour d’Experience Cloud](https://docs.adobe.com/content/help/fr-FR/release-notes/experience-cloud/current.html) pour prendre connaissance des modifications apportées à [!DNL Audience Manager] et aux autres solutions d’[!DNL Experience Cloud]. Pour consulter les anciennes notes de mise à jour, reportez-vous à la section [Années précédentes](../docs-updates/docs-2018.md).
 
-## October, 2018 {#oct-2018}
+## Octobre 2018 {#oct-2018}
 
 <table id="table_9017F44983CC49E888BE3470430D7ACB"> 
  <thead> 
@@ -37,7 +37,7 @@ Consultez les [Notes de mise à jour d’Experience Cloud](https://docs.adobe.co
   </tr> 
   <tr> 
    <td colname="col1"> <p><a href="../features/audience-lab/audience-lab.md">Audience Lab </a> </p> </td> 
-   <td colname="col2"> <p>Nous avons mis à jour la documentation afin d’inclure les nouvelles fonctionnalités de recherche et de filtrage pour les groupes de tests. Reportez-vous à la section <a href="../features/audience-lab/audience-lab.md#search-and-filter"> Recherche et filtrage des groupes</a> de tests. </p> </td> 
+   <td colname="col2"> <p>Nous avons mis à jour la documentation afin d’inclure les nouvelles fonctionnalités de recherche et de filtrage pour les groupes de tests. Voir la section <a href="../features/audience-lab/audience-lab.md#search-and-filter"> Recherche et filtrage des groupes de tests</a>. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p> <a href="../reference/system-components/components-data-action.md"> Optimisations IRIS</a> </p> </td> 
@@ -54,7 +54,7 @@ Consultez les [Notes de mise à jour d’Experience Cloud](https://docs.adobe.co
  </tbody> 
 </table>
 
-## September, 2018 {#sept-18}
+## Septembre 2018 {#sept-18}
 
 <table id="table_BAB960ED4DA1432087A162210681B225"> 
  <thead> 
@@ -66,12 +66,12 @@ Consultez les [Notes de mise à jour d’Experience Cloud](https://docs.adobe.co
  <tbody> 
   <tr> 
    <td colname="col1"> <p><a href="../features/manage-datasources.md#delete-data-source"> Suppression d’une source de données</a> </p> </td> 
-   <td colname="col2"> <p>Pour les clients qui utilisent l’Audience Manager et Adobe Analytics : L’interface utilisateur de l’Audience Manager ne vous permet pas de supprimer les sources de données créées automatiquement à partir des suites de rapports Analytics. Utilisez le service <a href="https://docs.adobe.com/content/help/en/core-services/interface/about-core-services/core-services-landing.html" format="https" scope="external"></a> principal pour annuler le mappage de ces sources de données. </p> </td> 
+   <td colname="col2"> <p>Pour les clients qui utilisent l'Audience Manager et Adobe Analytics : L’interface utilisateur de l’Audience Manager ne vous permet pas de supprimer les sources de données créées automatiquement à partir de vos suites de rapports Analytics. Utilisez le service principal <a href="https://docs.adobe.com/content/help/en/core-services/interface/about-core-services/core-services-landing.html" format="https" scope="external"></a> pour annuler le mappage de ces sources de données. </p> </td> 
   </tr> 
  </tbody> 
 </table>
 
-## August, 2018 {#aug-18}
+## Août 2018 {#aug-18}
 
 <table id="table_01EF3D23C50F4635BFBD55F9D6CE1752"> 
  <thead> 
@@ -83,15 +83,15 @@ Consultez les [Notes de mise à jour d’Experience Cloud](https://docs.adobe.co
  <tbody> 
   <tr> 
    <td colname="col1"> <p><a href="../dil/dil-overview.md">API Data Integration Library (DIL) </a> </p> </td> 
-   <td colname="col2"> <p>Starting with version 8.0, <span class="wintitle"> DIL</span> has a hard dependency on the <a href="https://docs.adobe.com/content/help/fr-FR/id-service/using/home.html" format="https" scope="external"><span class="keyword"> Adobe Experience Platform Identity Service</span></a>, version 3.3 or higher. </p> </td> 
+   <td colname="col2"> <p>À partir de la version 8.0, <span class="wintitle"> DIL</span> a une forte dépendance sur <a href="https://docs.adobe.com/content/help/fr-FR/id-service/using/home.html" format="https" scope="external"><span class="keyword"> Service d'identité Adobe Experience Platform</span></a>, version 3.3 ou supérieure. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p><a href="../dil/dil-overview.md"> Présentation de Data Integration Library (DIL)</a> </p> </td> 
-   <td colname="col2"> <p>Modification de <a href="../dil/dil-overview.md"> l’obtention et de la mise en oeuvre du code</a> DIL afin de tenir compte du fait que le lancement <span class="keyword"> d’</span> Adobe Experience Platform est l’outil de déploiement de code préféré dans l’ <span class="keyword"> Experience Cloud</span>. </p> </td> 
+   <td colname="col2"> <p>Modification de <a href="../dil/dil-overview.md"> Obtention et implémentation du code du DIL</a> pour tenir compte du fait que <span class="keyword"> Adobe Experience Platform Launch</span> est l'outil de déploiement du code préféré dans l'Experience Cloud <span class="keyword"> </span>. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"><a href="../dil/dil-class-overview/dil-create.md#dil-create"> Création DIL</a> </td> 
-   <td colname="col2"> <p>Les éléments suivants sont obsolètes à compter de <span class="wintitle"> DIL</span> 8.0, publié en août 2018 : </p> <p> 
+   <td colname="col2"> <p>Les éléments suivants sont obsolètes à partir de <span class="wintitle"> DIL</span> 8.0, publié en août 2018 : </p> <p> 
      <ul id="ul_2D54F91DF9304158808E2DBB9B34EDDF"> 
       <li id="li_D4FE87C2ABBD4F3BAEB913B11FD8A154"> <p>disableDestinationPublishingIframe </p> </li> 
       <li id="li_BC7191DF6D7D41CF859CD16C4A0ED350"> <p>iframeAkamaiHTTPS </p> </li> 
@@ -105,7 +105,7 @@ Consultez les [Notes de mise à jour d’Experience Cloud](https://docs.adobe.co
  </tbody> 
 </table>
 
-## July, 2018 {#july-18}
+## Juillet 2018 {#july-18}
 
 <table id="table_1C70ABC7084E4FA8916E460EDFEE8F85"> 
  <thead> 
@@ -130,7 +130,7 @@ Consultez les [Notes de mise à jour d’Experience Cloud](https://docs.adobe.co
  </tbody> 
 </table>
 
-## June, 2018 {#june-18}
+## Juin 2018 {#june-18}
 
 <table id="table_728845C945394BCC8689ACF50EDDB577"> 
  <thead> 
@@ -163,7 +163,7 @@ Consultez les [Notes de mise à jour d’Experience Cloud](https://docs.adobe.co
  <tbody> 
   <tr> 
    <td colname="col1"><a href="../api/dcs-intro/dcs-api-reference/dcs-api-methods.md"> Méthodes d’API DCS</a> </td> 
-   <td colname="col2"> <p>Les requêtes GET ont une longueur de contenu maximale de 8 Ko. Pour en savoir plus sur les méthodes d’API GET et POST, consultez cette page. </p> </td> 
+   <td colname="col2"> <p>Les demandes de GET ont une longueur de contenu maximale de 8 Ko. Vous pouvez en savoir plus sur les méthodes d'API GET et POST en visitant cette page. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p><a href="../reference/tls-support.md"> Obsolescence du protocole TLS 1.0</a> </p> </td> 
@@ -179,7 +179,7 @@ Consultez les [Notes de mise à jour d’Experience Cloud](https://docs.adobe.co
   </tr> 
   <tr> 
    <td colname="col1"> <p><a href="../overview/data-security-and-privacy/aam-gdpr-glossary.md"> FAQ relative au RGPD</a> </p> </td> 
-   <td colname="col2"> <p>Ce document contient quelques-unes des questions les plus courantes posées par nos clients et partenaires au sujet du Règlement général européen sur la protection des données (RGPD) et comment l'Adobe Audience Manager, en tant que processeur de données, répond aux diverses exigences du RGPD. </p> </td> 
+   <td colname="col2"> <p>Ce document contient quelques-unes des questions les plus courantes posées par nos clients et partenaires au sujet du Règlement général européen sur la protection des données (RGPD), et comment Adobe Audience Manager, en tant que processeur de données, répond aux diverses exigences du RGPD. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p><a href="../overview/data-security-and-privacy/aam-gdpr-partners.md"> Partenaire RGPD non segmenté</a> </p> </td> 
@@ -254,7 +254,7 @@ Consultez les [Notes de mise à jour d’Experience Cloud](https://docs.adobe.co
   </tr> 
   <tr> 
    <td colname="col1"> <p><a href="../features/traits/trait-and-segment-qualification-reference.md"> Référence de qualification des traits</a> </p> </td> 
-   <td colname="col2"> <p>Les utilisateurs débuts bénéficier d’une caractéristique basée sur des règles environ 4 heures après avoir <a href="../features/traits/create-onboarded-rule-based-traits.md#create-rules-based-or-onboarded-traits"> créé la caractéristique</a> dans l’interface utilisateur. Lisez le document pour en savoir plus sur la qualification des caractéristiques. </p> </td> 
+   <td colname="col2"> <p>Vos utilisateurs débuts la qualification pour une caractéristique basée sur des règles environ 4 heures après avoir <a href="../features/traits/create-onboarded-rule-based-traits.md#create-rules-based-or-onboarded-traits"> créé la caractéristique</a> dans l’interface utilisateur. Lisez le document pour en savoir plus sur la qualification des caractéristiques. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p><a href="../features/administration/usage-limits.md"> Limites d’utilisation</a> </p> </td> 
